--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 theme = 'ananke'
 title = "Notre-Dame de Paris"
-#baseURL = "https://gohugo-theme-ananke.pages.dev"
+baseURL = "https://chetan3007.github.io"
 languageCode = "en-us"
 #theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
 resourceDir = "../resources"
