--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
 theme = 'ananke'
-title = "Notre-Dame de Paris"
+title = "Tales by Chetan"
 baseURL = "https://chetan3007.github.io"
 languageCode = "en-us"
-#theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
 resourceDir = "../resources"
 
 DefaultContentLanguage = "en"
@@ -40,3 +39,4 @@ enableRobotsTXT = true
 [[params.ananke_socials]]
 name = "twitter"
 url = "https://twitter.com/GoHugoIO"
+
